...
    <string name="web_profile_view_details">Web Profile</string>
    <string name="select_app_language">App Language</string>

    <!-- Dialog messages -->
    <string name="exit_confirmation_message">Do you want to exit?</string>
    <string name="progress_dialog_message">Processing......</string>
    <string name="add_fav_confirmation_message">Do you want to add to favourites?</string>
    <string name="remove_fav_confirmation_message">Do you want to remove this from favourites?</string>
    <string name="data_already_exist">Data already exists</string>
    <string name="add_fav_success_message">The account was added to favourites successfully</string>
    <string name="delete_fav_success_message">The account was deleted from favourites successfully</string>

    <!-- Image content Descriptions -->
...
    <string name="alert_dialog_image">Alert Dialog Icon</string>
    <string name="progress_dialog_image">Progress Dialog Icon</string>
    <string name="favourite_button_image">Favourite button Icon</string>
    <string name="forward_arrow_icon">Forward Arrow Icon</string>
    <string name="fav_delete_icon">Favourite Delete Icon</string>
    <string name="radio_button_custom_icon">Radio Button Icon</string>
    <string name="search_input_empty_error">Please enter value before submit</string>
    <string name="no_internet">No Internet</string>

    <!-- Details Page Resource Values -->
    <string name="view_more">View More</string>
    <string name="starts">Starts</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
...
