...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ownerIconView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/avatar_margin"
            android:contentDescription="@null"
            app:imageUrl="@{vm.gitRepoData.owner.avatarUrl}"
            app:layout_constraintBottom_toTopOf="@id/nameView"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

...
